Fix overlapping navbar with section heading

--- a/style.css
+++ b/style.css
@@ -499,7 +499,7 @@ h4 {
 
   /* ABOUT ME */
   .about-me {
-    padding: 170px 100px 0px;
+    padding: 135px 100px 0px;
   }
 
   .about-me p {
@@ -509,7 +509,7 @@ h4 {
 
   /* PROJECTS */
   .my-projects {
-    padding: 100px 100px 90px;
+    padding: 135px 100px 90px;
   }
 
   .my-projects a {
